2010-04-06  Abhinav Mithal <abhinav.mithal@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] npapi header leaves XP_WIN flag defined even when __SYMBIAN32__ flag is found
        https://bugs.webkit.org/show_bug.cgi?id=34614

        Do not define XP_WIN if WebKit is compiled for Symbian.

        No new tests as there is no new functionality.

        * bridge/npapi.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@57170 bbb929c8-8fbe-4397-9dbb-9b2b20218538